objects/Batch_Job_Schedule__c.object
<CustomObject>
    <description>Batch Apex Job Schedule</description>
    <fields>
        <fullName>Cron_Expression__c</fullName>
        <label>Cron Expression</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cron_Trigger_Id__c</fullName>
        <description>Scheduled Job Cron Trigger Id</description>
        <inlineHelpText>Scheduled Job Cron Trigger Id</inlineHelpText>
        <label>Cron Trigger Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Every_Number_of_Days__c</fullName>
        <label>Every Number of Day(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Every_Number_of_Hours__c</fullName>
        <label>Every Number of Hour(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Every_Number_of_Months__c</fullName>
        <label>Every Number of Month(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency_Type__c</fullName>
        <label>Frequency Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>12 Hourly</fullName>
                    <isActive>false</isActive>
                    <label>12 Hourly</label>
                </value>
                <value>
                    <fullName>15Minutes</fullName>
                    <isActive>false</isActive>
                    <label>15 Minutes</label>
                </value>
                <value>
                    <fullName>2 Hourly</fullName>
                    <isActive>false</isActive>
                    <label>2 Hourly</label>
                </value>
                <value>
                    <fullName>2 Monthly</fullName>
                    <isActive>false</isActive>
                    <label>2 Monthly</label>
                </value>
                <value>
                    <fullName>2 Weekly</fullName>
                    <isActive>false</isActive>
                    <label>2 Weekly</label>
                </value>
                <value>
                    <fullName>3 Hourly</fullName>
                    <isActive>false</isActive>
                    <label>3 Hourly</label>
                </value>
                <value>
                    <fullName>3 Weekly</fullName>
                    <isActive>false</isActive>
                    <label>3 Weekly</label>
                </value>
                <value>
                    <fullName>30Minutes</fullName>
                    <isActive>false</isActive>
                    <label>30 Minutes</label>
                </value>
                <value>
                    <fullName>4 Hourly</fullName>
                    <isActive>false</isActive>
                    <label>4 Hourly</label>
                </value>
                <value>
                    <fullName>4 Weekly</fullName>
                    <isActive>false</isActive>
                    <label>4 Weekly</label>
                </value>
                <value>
                    <fullName>6 Hourly</fullName>
                    <isActive>false</isActive>
                    <label>6 Hourly</label>
                </value>
                <value>
                    <fullName>6 Monthly</fullName>
                    <isActive>false</isActive>
                    <label>6 Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                    <isActive>false</isActive>
                    <label>Quarterly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Start_Day__c</fullName>
        <label>Preferred Start Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Start_Hour__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <label>Preferred Start Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0AM</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1AM</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2AM</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3AM</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4AM</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5AM</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6AM</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7AM</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>8AM</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>9AM</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10AM</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>11AM</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>12PM</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>13PM</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>14PM</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>15PM</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>16PM</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>17PM</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>18PM</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>19PM</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20PM</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>21PM</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>22PM</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>23PM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Start_Minute__c</fullName>
        <label>Preferred Start Minute</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Start_Month__c</fullName>
        <label>Preferred Start Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Start_Week_Day__c</fullName>
        <label>Preferred Start Week Day</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MON</fullName>
                    <label>Monday</label>
                </value>
                <value>
                    <fullName>TUE</fullName>
                    <label>Tuesday</label>
                </value>
                <value>
                    <fullName>WED</fullName>
                    <label>Wednesday</label>
                </value>
                <value>
                    <fullName>THU</fullName>
                    <label>Thursday</label>
                </value>
                <value>
                    <fullName>FRI</fullName>
                    <label>Friday</label>
                </value>
                <value>
                    <fullName>SAT</fullName>
                    <label>Saturday</label>
                </value>
                <value>
                    <fullName>SUN</fullName>
                    <label>Sunday</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Batch Job Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Frequency_Type__c</columns>
        <columns>Preferred_Start_Hour__c</columns>
        <columns>Cron_Expression__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch Job Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Job Schedules</pluralLabel>
    <recordTypes>
        <fullName>Custom_Cron_Expression_Job</fullName>
        <active>true</active>
        <description>Jobs with custom cron expression</description>
        <label>Custom Cron Expression Job</label>
    </recordTypes>
    <recordTypes>
        <fullName>Daily_Job</fullName>
        <active>true</active>
        <description>Daily batch jobs</description>
        <label>Daily Job</label>
    </recordTypes>
    <recordTypes>
        <fullName>Existing_Scheduled_Job</fullName>
        <active>true</active>
        <description>Link an existing Scheduled Apex job</description>
        <label>Existing Scheduled Job</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hourly_Job</fullName>
        <active>true</active>
        <description>Hourly batch jobs</description>
        <label>Hourly Job</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly_Job</fullName>
        <active>true</active>
        <description>Monthly batch jobs</description>
        <label>Monthly Job</label>
    </recordTypes>
    <recordTypes>
        <fullName>Weekly_Job</fullName>
        <active>true</active>
        <description>Weekly batch jobs</description>
        <label>Weekly Job</label>
    </recordTypes>
    <recordTypes>
        <fullName>Yearly_Job</fullName>
        <active>true</active>
        <description>Yearly batch jobs</description>
        <label>Yearly Job</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>